Renamed some references; optimized imports

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -145,7 +145,7 @@
     "pv_sj = eipv.PhoneView(sd_sj)\n",
     "pv_ucb = eipv.PhoneView(sd_ucb)\n",
     "\n",
-    "## %%capture is a cell-level Jupyter magic functioon that redirects the stdout to null. "
+    "## %%capture is a cell-level Jupyter magic function that redirects the stdout to null. "
    ]
   },
   {
@@ -945,7 +945,7 @@
     "        df.T.plot(style='o', ax=ax[i], title=f'$F_1$ Scores by Base Mode \\n{os}:{role} ').legend(loc='lower left')\n",
     "        ax[i].set_xticks(range(len(df.T)))\n",
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
-    "    fig.savefig(f\"images/distance_f_scores_selected\",  bbox_inches=\"tight\")"
+    "    fig.savefig(f\"images/{criterion}_f_scores_selected\",  bbox_inches=\"tight\")"
    ]
   },
   {
@@ -1110,7 +1110,7 @@
     "def plot_cm(os, pv, d_type, INDEX_MAP=None, criterion='duration', normalization=None):\n",
     "\n",
     "    assert criterion in ['duration', 'distance'], f\"{criterion=} is not defined.\"\n",
-    "    assert normalization in ['rows', 'columns', 'all', None], f\"{normalization=} is not reecognized or supported\"\n",
+    "    assert normalization in ['pred', 'gt', 'all', None], f\"{normalization=} is not reecognized or supported\"\n",
     "\n",
     "    fig, ax = plt.subplots(1,3, figsize=(22,10), dpi=300, sharey=True)\n",
     "    y=.95\n",
@@ -1142,12 +1142,18 @@
     "            columns=['WALKING', 'BICYCLING', 'E_BIKE', 'ESCOOTER', 'CAR', 'BUS', 'SUBWAY', 'LIGHT_RAIL', 'TRAIN', 'NO_GT_START', 'NO_GT_MIDDLE', 'NO_GT_END']\n",
     "        ).fillna(0)\n",
     "\n",
-    "        if normalization == 'rows':\n",
-    "            df = df/np.sum(df, axis=1, keepdims=True)\n",
-    "        elif normalization == 'columns':\n",
-    "            df = df/np.sum(df, axis=0, keepdims=True)\n",
+    "        if normalization == 'pred':\n",
+    "            # After transposing, predictions are axis=0\n",
+    "            df = df/df.sum(axis=1, skipna=True)\n",
+    "        elif normalization == 'gt':\n",
+    "            # After transposing, GTs aree axis=1\n",
+    "            df = df/df.sum(axis=0, skipna=True)\n",
     "        elif normalization == 'all':\n",
-    "            df = df/df.sum()\n",
+    "            # Axis-agnostic.\n",
+    "            df = df/df.sum(skipna=True)\n",
+    "        \n",
+    "        # div-by-zero causes NaN.\n",
+    "        df = df.fillna(0)\n",
     "\n",
     "        cm = ax[k].imshow(df.transpose(), interpolation='nearest',  cmap=plt.cm.coolwarm, aspect='auto')\n",
     "        ax[k].set_title(role)\n",
@@ -1158,10 +1164,18 @@
     "        ax[k].set_xticklabels(df.index, rotation=80)\n",
     "        color_thresh = df.max().max() / 4\n",
     "        for i, j in itertools.product(range(df.shape[1]), range(df.shape[0])  ):\n",
-    "            ax[k].text(j, i, (int(df.transpose().iat[i,j])), horizontalalignment='center', \n",
-    "                   color='white' \n",
-    "                       if df.transpose().iat[i,j] < color_thresh \n",
-    "                       else 'black')\n",
+    "\n",
+    "            if normalization is None:\n",
+    "                ax[k].text(j, i, (int(df.transpose().iat[i,j])), horizontalalignment='center', \n",
+    "                       color='white' \n",
+    "                           if df.transpose().iat[i,j] < color_thresh \n",
+    "                           else 'black')\n",
+    "            else:\n",
+    "                ax[k].text(j, i, np.round(df.transpose().iat[i,j], 3), horizontalalignment='center', \n",
+    "                    color='white' \n",
+    "                        if df.transpose().iat[i,j] < color_thresh \n",
+    "                        else 'black')\n",
+    "                        \n",
     "    fig.subplots_adjust(right=0.8)\n",
     "    cbar_ax = fig.add_axes([0.85, 0.15, 0.05, 0.7])\n",
     "    fig.colorbar(cm, cax=cbar_ax)\n",
@@ -1386,7 +1400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('ios', [pv_la, pv_sj, pv_ucb], 'raw', criterion='distance')"
+    "plot_cm('ios', [pv_la, pv_sj, pv_ucb], 'raw')"
    ]
   },
   {
@@ -1396,7 +1410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('ios', [pv_la, pv_sj, pv_ucb], 'raw', criterion='distance', normalization='columns')"
+    "plot_cm('ios', [pv_la, pv_sj, pv_ucb], 'raw', criterion='distance')"
    ]
   },
   {
@@ -1484,7 +1498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM, criterion='distance')"
+    "plot_cm('ios', [gisv_la,gisv_sj,gisv_ucb], 'gis', INDEX_MAP=IIM, criterion='distance', normalization='gt')"
    ]
   },
   {
@@ -1523,6 +1537,17 @@
    "outputs": [],
    "source": [
     "plot_f_scores('android', criterion='distance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb912632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def export_confusion_matrix(matrix: pd.DataFrame, output_dir: Path):\n",
+    "    pass"
    ]
   },
   {
@@ -2153,6 +2178,14 @@
     "test_trip = [{'ss_timeline'  : [{'mode' : 'WALKING', 'start_ts' : 0, 'end_ts' : 1}], 'gts_timeline' : []}]\n",
     "get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8448910",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
