Clean up code; incorporate CSV export for downstream tasks

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -186,22 +186,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_trajectories(spec_id: str, run_ix: int) -> pd.DataFrame:\n",
+    "def fetch_trajectories(spec_id: str, run_ix: int, with_ends: bool = False) -> pd.DataFrame:\n",
     "\n",
     "    '''\n",
     "    Return a reference trajectory datafrane given a spec ID and a trip ID.\n",
+    "    e.g.: for spec_id=car_scooter_brex_san_jose, run_ix=0, and with_ends=True,\n",
+    "    the function fetches the following files and concatenates them in a dataframe along axis=0:\n",
+    "\n",
+    "    car_scooter_brex_san_jose\n",
+    "        | - no_ends\n",
+    "        | - with_ends\n",
+    "            | - bus trip with e-scooter access\n",
+    "                | - city_bus_rapid_transit_0\n",
+    "                | - city_escooter_0\n",
+    "                | - walk_back_from_bus_0\n",
+    "            | - freeway_driving_weekday\n",
+    "                | - freeway_driving_weekday_0\n",
     "    '''\n",
     "\n",
     "    root = pathlib.Path(\"./bin/data\")\n",
     "    return_file = pd.DataFrame()\n",
     "\n",
     "    workdir = root\n",
-    "    assert (workdir / spec_id).exists(), \"F1\"\n",
+    "    assert (workdir / spec_id).exists(), f\"{spec_id} not found.\"\n",
     "\n",
     "    workdir = workdir / spec_id\n",
-    "    assert workdir.exists() and workdir.is_dir(), \"F2\"\n",
+    "    assert workdir.is_dir(), f\"{spec_id} found, but is not a directory.\"\n",
     "\n",
-    "    found_glob = list(workdir.glob(f'*/*_{run_ix}'))\n",
+    "    if with_ends:\n",
+    "        found_glob = list(workdir.glob(f'./with_ends/*/*_{run_ix}'))\n",
+    "    else:\n",
+    "        found_glob = list(workdir.glob(f'./no_ends/*/*_{run_ix}'))\n",
     "\n",
     "    assert len(found_glob) > 0, f\"No files found for {spec_id=}, {run_ix=}\"\n",
     "\n",
@@ -209,6 +224,7 @@
     "\n",
     "    for file in found_glob:\n",
     "        tdf = pd.read_csv(file)\n",
+    "        # Ignore the first (Unnamed: 0) column.\n",
     "        tdf = tdf.iloc[:, 1:]\n",
     "        df = pd.concat([df, tdf], axis=0)\n",
     "    \n",
@@ -222,7 +238,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_reference_trajectory(pv, os, role):\n",
+    "def get_reference_trajectory(pv, os, role, with_ends=False):\n",
+    "\n",
+    "    '''\n",
+    "    Return a list of dataframes for every run in a given `PhoneView`. Filters by `os` and `role`.\n",
+    "    '''\n",
     "\n",
     "    dfs = []\n",
     "\n",
@@ -236,7 +256,7 @@
     "                if run['eval_role_base'] != role:\n",
     "                    continue\n",
     "                \n",
-    "                df = fetch_trajectories(pv.spec_details.CURR_SPEC_ID, run_ix)\n",
+    "                df = fetch_trajectories(pv.spec_details.CURR_SPEC_ID, run_ix, with_ends=with_ends)\n",
     "                df['run_ix'] = run_ix\n",
     "\n",
     "                dfs.append(df.copy())\n",
@@ -679,7 +699,7 @@
     "        trajectories = []\n",
     "        for v in pv:\n",
     "            trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
-    "            trajectories.extend(get_reference_trajectory(v, os, role))\n",
+    "            trajectories.extend(get_reference_trajectory(v, os, role, with_ends=True))\n",
     "    else:\n",
     "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "\n",
@@ -718,7 +738,7 @@
     "                            if filtered_trajectory.shape[0] > 0:\n",
     "                                dist = location_smoothing.add_dist(filtered_trajectory).distance.sum()\n",
     "                            else:\n",
-    "                                dist - 0\n",
+    "                                dist = 0\n",
     "\n",
     "                            if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
     "                                TP[mode] = TP.setdefault(mode, 0) + dist\n",
@@ -920,7 +940,7 @@
     "        df.T.plot(style='o', ax=ax[i], title=f' {role} ').legend(loc='lower left')\n",
     "        ax[i].set_xticks(range(len(df.T)))\n",
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
-    "    title = f\"$F_1$ Scores by Base Mode for Phones Running {os} at Various Configuration Settings\"\n",
+    "    title = f\"$F_1$ Scores by Base Mode and {criterion=} for Phones Running {os} at Various Configuration Settings\"\n",
     "    plt.suptitle(title, weight='bold', size='x-large')\n",
     "    fig.savefig(f\"images/{criterion}_f_scores_for_{os}\",  bbox_inches=\"tight\")"
    ]
@@ -957,7 +977,7 @@
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
     "        \n",
-    "        df.T.plot(style='o', ax=ax[i], title=f'$F_1$ Scores by Base Mode \\n{os}:{role} ').legend(loc='lower left')\n",
+    "        df.T.plot(style='o', ax=ax[i], title=f'$F_1$ Scores for {criterion=} by Base Mode \\n{os}:{role} ').legend(loc='lower left')\n",
     "        ax[i].set_xticks(range(len(df.T)))\n",
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
     "    fig.savefig(f\"images/{criterion}_f_scores_selected\",  bbox_inches=\"tight\")"
@@ -1036,8 +1056,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import IPython.display as IDisplay\n",
-    "\n",
     "def get_confusion_matrix(os, role, pv, test=False, test_trip=None, criterion='duration'):\n",
     "\n",
     "    cm_l = []\n",
@@ -1050,7 +1068,7 @@
     "        trajectories = []\n",
     "        for v in pv :\n",
     "            trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
-    "            trajectories.extend(get_reference_trajectory(v, os, role))\n",
+    "            trajectories.extend(get_reference_trajectory(v, os, role, with_ends=True))\n",
     "        \n",
     "        assert len(trips) == len(trajectories)\n",
     "\n",
@@ -1072,6 +1090,12 @@
     "                        filtered_trajectory_data = ref_trajectory.loc[\n",
     "                            (ref_trajectory.ts >= range_start) & (ref_trajectory.ts <= range_end), :\n",
     "                        ]\n",
+    "\n",
+    "                        if gts['mode'] == 'E_BIKE':\n",
+    "                            print(f\"GT: E_BIKE, Predicted: {GISBMM[ss['mode']]}\")\n",
+    "                            # print(f\"GT time: {arrow.get(gts['start_ts'])} -> {arrow.get(gts['end_ts'])}\")\n",
+    "                            # print(f\"SS time: {arrow.get(ss['start_ts'])} -> {arrow.get(ss['end_ts'])}\")\n",
+    "                            # print(10*'~')\n",
     "\n",
     "                        if filtered_trajectory_data.shape[0] > 0:\n",
     "                            dist = location_smoothing.add_dist(filtered_trajectory_data).distance.sum()\n",
@@ -1141,11 +1165,9 @@
     "\n",
     "    fig, ax = plt.subplots(1,3, figsize=(22,10), dpi=300, sharey=True)\n",
     "    y=.95\n",
+    "    ROUND_PRECISION = 3\n",
     "    fig.text(0.5, 0.0, 'Predicted Label', ha='center', fontsize='xx-large')\n",
     "    fig.text(0.04, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
-    "\n",
-    "    ## TODO: Use thee GIS Confusion matrix.\n",
-    "    save_df = None\n",
     "\n",
     "    for k, role in enumerate([\"HAHFDC\", \"HAMFDC\", \"MAHFDC\"]):\n",
     "        if d_type =='raw':\n",
@@ -1161,8 +1183,6 @@
     "        elif d_type == 'random_forest' or 'gis':\n",
     "            df = pd.DataFrame(get_confusion_matrix(os, role, pv, criterion=criterion)).groupby('sensed_mode').sum().rename(index=INDEX_MAP)\n",
     "            df = pd.DataFrame(df, index=sorted(df.index, key=sort_key))\n",
-    "            if (os == 'android' and role == 'HAMFDC') or (os == 'ios' and role == 'HAHFDC'):\n",
-    "                save_df = df\n",
     "            fname = f\"images/{d_type}_{criterion}_cm_{os}\"\n",
     "            if d_type == 'random_forest':\n",
     "                title = f\"Confusion Matrices for Inferred Output Data (Random Forest) on Phones Running {os} \\n by Calibration Settings\"\n",
@@ -1199,14 +1219,16 @@
     "        ax[k].set_xticklabels(df.index, rotation=80)\n",
     "        color_thresh = df.max().max() / 4\n",
     "        for i, j in itertools.product(range(df.shape[1]), range(df.shape[0])  ):\n",
-    "\n",
     "            if normalization is None:\n",
+    "                # If no normalization is used, the result is a large integer.\n",
     "                ax[k].text(j, i, (int(df.transpose().iat[i,j])), horizontalalignment='center', \n",
     "                       color='white' \n",
     "                           if df.transpose().iat[i,j] < color_thresh \n",
     "                           else 'black')\n",
     "            else:\n",
-    "                ax[k].text(j, i, np.round(df.transpose().iat[i,j], 3), horizontalalignment='center', \n",
+    "                # However, if normalization is used, we get FP numbers between 0-1 that visually overlap over each other in the CM.\n",
+    "                # Therefore, we round the numbers off to a predefined precision to maintain visual coherence.\n",
+    "                ax[k].text(j, i, np.round(df.transpose().iat[i,j], ROUND_PRECISION), horizontalalignment='center', \n",
     "                    color='white' \n",
     "                        if df.transpose().iat[i,j] < color_thresh \n",
     "                        else 'black')\n",
@@ -1346,6 +1368,7 @@
     "            ax[k].set_xticklabels(df.index, rotation=80)\n",
     "            color_thresh = df.max().max() / 4\n",
     "            for i, j in itertools.product(range(df.shape[1]), range(df.shape[0])  ):\n",
+    "                ## Explanation for this conditional is provided in plot_cm().\n",
     "                if normalization is None:\n",
     "                    ax[k].text(j, i, (int(df.transpose().iat[i,j])), horizontalalignment='center', \n",
     "                        color='white' \n",
@@ -1465,6 +1488,26 @@
     "    df = df.rename(mapper= {x: str.lower(x) for x in df.columns}, axis=1)\n",
     "    df = df.rename(mapper= {x: str.lower(x) for x in df.index}, axis=0)\n",
     "    return df.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "250a294b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_cm(oses=['ios'], roles=['HAHFDC'], criteria=['duration', 'distance'], normalization='pred')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd342807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_cm(oses=['android'], roles=['HAMFDC'], criteria=['duration', 'distance'], normalization='pred')"
    ]
   },
   {
@@ -2600,7 +2643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
